--- a/style.css
+++ b/style.css
@@ -7,15 +7,16 @@ body{
 }
 p{
   text-align: center;
-  front-size:20px;
+  font-size: 20px;
 }
 #missao{
-  front-size:30px;
+  font-size: 30px;
 }
 #banner{
-  width:100%;
+  width: 100%;
 }
-h1{
+h1 {
+  text-align: center;
 }
 em strong{
   color: blue;
