--- a/style.css
+++ b/style.css
@@ -3,21 +3,25 @@
 padding: 0;
 }
 body {
-  background: #cccccc
+    background: #CCCCCC
 }
-p {
-  text-align: center;
-  font-size: 20px;
-}
-#missao {
-  font-size: 30px;
-}
+
 #banner {
-  width: 100%;
+    width: 100%;
 }
+
 h1 {
-  text-align: center;
+    text-align: center
 }
+
+p {
+    text-align: center;
+}
+
+#missao {
+    font-size: 20px
+}
+
 em strong {
-  color: blue;
+    color: #blue;
 }
