--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 *{
   margin: 0;
   padding: 0;
-}
+  
+  }
 body {
  
 }
@@ -9,29 +10,11 @@ body {
 #banner {
     width: 100%;
 }
-.principal{
-  background: #CCCCCC
+.principal {
+  background: #CCCCCC;
   padding: 30px;
 }
-.itens{
-  front-style: italic;
-}
-.beneficios{
-  background: #FFFFFF
-  padding: 20px;
-}
-h2{
-  text-align: center;
-}
-ul{
-  display: inline-block;
-  vertical-aling: top;
-  width: 20%;
-  margin-right: 15%;
-}
-.imagem-beneficios{
-  width:50%
-}
+
 h1 {
     text-align: center
 }
@@ -46,4 +29,27 @@ p {
 
 em strong {
     color: #a020f0;
+}
+
+.itens{
+  front-style: italic;
+}
+
+.beneficios {
+  background: #FFFFFF
+  padding: 20px;
+}
+
+h2 {
+  text-align: center;
+}
+
+ul {
+  display-inline: block;
+  vertical-aling: top;
+  width: 20%;
+  margin-right: 15%;
+}
+.imagem-beneficios {
+  width:50%
 }
