--- a/style.css
+++ b/style.css
@@ -15,8 +15,12 @@ body {
   padding: 30px;
 }
 
-h1 {
-    text-align: center
+.titulo-principal{
+   padding-left:20px;
+}
+
+.titulo-secundario{
+  text-aling: center;
 }
 
 p {
@@ -38,10 +42,6 @@ em strong {
 .beneficios {
   background: #FFFFFF
   padding: 20px;
-}
-
-h2 {
-  text-align: center;
 }
 
 ul {
