--- a/style.css
+++ b/style.css
@@ -1,47 +1,46 @@
-*{
+* {
   margin: 0;
   padding: 0;
-  
-  }
-body {
- 
+
 }
 
+body {}
+
 #banner {
-    width: 100%;
+  width: 100%;
 }
+
 .principal {
   background: #CCCCCC;
   padding: 30px;
 }
 
-.titulo-principal{
-   padding-left:20px;
+.titulo-principal {
+  padding-left: 20px;
 }
 
-.titulo-secundario{
+.titulo-secundario {
   text-aling: center;
 }
 
 p {
-    text-align: center;
+  text-align: center;
 }
 
 #missao {
-    font-size: 20px
+  font-size: 20px
 }
 
 em strong {
-    color: #a020f0;
+  color: #a020f0;
 }
 
-.itens{
+.itens {
   front-style: italic;
 }
 
 .beneficios {
-  background: #FFFFFF
-  padding: 20px;
+  background: #FFFFFF padding: 20px;
 }
 
 ul {
@@ -50,6 +49,7 @@ ul {
   width: 20%;
   margin-right: 15%;
 }
+
 .imagem-beneficios {
-  width:50%
+  width: 50%
 }
