--- a/produtos.css
+++ b/produtos.css
@@ -1,5 +1,11 @@
 header{
   background: #BBBBBB
+  padding: 20px 0;
+}
+.caixa{
+  position: relative;
+  width: 940px;
+  margin: 0 auto;
 }
 nav li{
   display: inline;
