--- a/produtos.css
+++ b/produtos.css
@@ -7,6 +7,11 @@ header{
   width: 940px;
   margin: 0 auto;
 }
+nav{
+  position: absolute;
+  top: 110px;
+  right: 0;
+}
 nav li{
   display: inline;
   margin: 0 0 0 15px;
