--- a/produtos.css
+++ b/produtos.css
@@ -44,10 +44,10 @@ nav a:hover{
   border-radius: 10px;
 }
 .produtos li:hover{
-  border-color: green;
+  border-color: blue;
 }
 .produtos li:active{
-  border-color: blue;
+  border-color: purple;
 }
 .produtos li:hover h2{
   font-size: 34px;
