--- a/produtos.css
+++ b/produtos.css
@@ -59,7 +59,7 @@ nav a:hover{
 .produtos-descricao-preco{
   font-size: 18px;
 }
-.produtos-decricao-texto{
+.produtos-descricao-texto{
   font-size: 22px;
   font-weight: bold;
   margin-top: 10px;
