--- a/produtos.css
+++ b/produtos.css
@@ -81,7 +81,7 @@ main{
 form{
   margin: 40px 0;
 }
-form label, form p{
+form label, legend{
   display: block;
   font-size: 20px;
   margin: 0 0 10px;
