--- a/style.css
+++ b/style.css
@@ -150,7 +150,9 @@ em strong {
 }
 
 .beneficios {
-  background: #FFFFFF; padding: 20px;
+  background: #FFFFFF; 
+  padding: 20px;
+  text-aling: center;
 }
 
 ul {
@@ -159,7 +161,20 @@ ul {
   width: 20%;
   margin-right: 15%;
 }
+.imagem-beneficios{
+  width: 50%
+}
 
-.imagem-beneficios {
-  width: 50%;
+.mapa{
+  padding: 3em 0;
+}
+
+.mapa p{
+  margin: 0 0 2em;
+  text-aling: center;
+}
+
+.video {
+  width: 560px;
+  margin: 1em auto;
 }
