--- a/style.css
+++ b/style.css
@@ -1,180 +1,204 @@
-header{
-  background: #BBBBBB;
-  padding: 20px 0;
-}
-.caixa{
-  position: relative;
-  width: 940px;
-  margin: 0 auto;
-}
-nav{
-  position: absolute;
-  top: 110px;
-  right: 0;
-}
-nav li{
-  display: inline;
-  margin: 0 0 0 15px;
-}
-nav a{
-  text-transform: uppercase;
-  color: #fa4b68;
-  font-weight: bold;
-  font-size: 22px;
-  text-decoration: none;
-}
-nav a:hover{ 
-  color: #C78C19;
-  text-decoration: underline;
-}
-.produtos{
-  width: 940px;
-  margin: 0 auto;
-  padding: 50px;
-}
-.produtos li{
-  display: inline-block;
-  text-align: center;
-  width: 30%;
-  vertical-align: top;
-  margin:0 1.5%;
-  padding: 30px 20px;
-  box-sizing: border-box;
-  border: 2px solid #000000;
-  border-radius: 10px;
-}
-.produtos li:hover{
-  border-color: blue;
-}
-.produtos li:active{
-  border-color: purple;
-}
-.produtos li:hover h2{
-  font-size: 34px;
-}
-.produtos h2{
-  font-size: 30px;
-  font-weight: bold;
-}
-.produtos-descricao{
-  font-size: 18px;
-}
-.produtos-preco{
-  font-size: 22px;
-  font-weight: bold;
-  margin-top: 10px;
-}
-footer{
-  text-align: center;
-  background: url("bg.jpg");
-  padding: 40px 0;
-}
-.copyright{
-  color: #FFFFFF;
-  font-size: 13px;
-  margin: 20px 0 0;
-}
-main{
-  width: 940px;
-  margin: 0 auto;
-}
-form{
-  margin: 40px 0;
-}
-form label, legend{
-  display: block;
-  font-size: 20px;
-  margin: 0 0 10px;
-}
-.input-padrao{
-  display: block;
-  margin: 0 0 20px;
-  padding: 10px 25px;
-  width: 50px;
-}
-.checkbox{
-  margin: 20px 0;
-}
-.enviar {
-  width: 40%;
-  padding: 15px 0;
-  background: pink;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  border: none;
-  border-radius: 5px;
-  transitions: 1s all;
-  cursor: ponter;
-}
-.enviar:hover {
-  background: dark orange;
-  transform: scale(12);
+body {
+	font-family: "Montserrat", sans-serif;
+ 	font-optical-sizing: auto;
+  	font-weight: 400;
+  	font-style: normal;
 }
 
-body {
-  font-family:'montserrat', sans-serif;
+header {
+	background: #BBBBBB;
+	padding: 20px 0;
+}
+
+.caixa {
+	position: relative;
+	width: 940px;
+	margin: 0 auto;
+}
+
+nav {
+	position: absolute;
+	top: 110px;
+	right: 0;
+}
+
+nav li {
+	display: inline;
+	margin: 0 0 0 15px;
+}
+
+nav a {
+	text-transform: uppercase;
+	color: #000000;
+	font-weight: bold;
+	font-size: 22px;
+	text-decoration: none;
+}
+
+nav a:hover {
+	color: #C78C19;
+	text-decoration: underline;
+}
+
+.produtos {
+	width: 940px;
+	margin: 0 auto;
+	padding: 50px 0;
+}
+
+.produtos li {
+	display: inline-block;
+	text-align: center;
+	width: 30%;
+	vertical-align: top;
+	margin: 0 1.5%;
+	padding: 30px 20px;
+	box-sizing: border-box;
+	border: 2px solid #000000;
+	border-radius: 10px;
+}
+
+.produtos li:hover {
+	border-color: #C78C19;
+}
+
+.produtos li:active {
+	border-color: #088C19;	
+}
+
+.produtos li:hover h2 {
+	font-size: 34px;
+}
+
+.produtos h2 {
+	font-size: 30px;
+	font-weight: bold;
+}
+
+.produto-descricao {
+	font-size: 18px;
+}
+
+.produto-preco {
+	font-size: 22px;
+	font-weight: bold;
+	margin-top: 10px;
+}
+
+footer {
+	text-align: center;
+	background: url("bg.jpg");
+	padding: 40px 0;
+}
+
+.copyright {
+	color: #FFFFFF;
+	font-size: 13px;
+	margin: 20px 0 0;
+}
+
+main {
+	width: 940px;
+	margin: 0 auto;
+}
+
+form {
+	margin: 40px 0;
+}
+
+form label, form legend {
+	display:block;
+	font-size: 20px;
+	margin: 0 0 10px;
+}
+
+.input-padrao {
+	display: block;
+	margin: 0 0 20px;
+	padding: 10px 25px;
+	width: 50%;
+}
+
+.checkbox {
+	margin: 20px 0;
+}
+
+.enviar {
+	width:40%;
+	padding: 15px 0;
+	background: orange;
+	color: white;
+	font-weight: bold;
+	font-size: 18px;
+	border: none;
+	border-radius: 5px;
+	transition: 1s all;
+	cursor: pointer;
+}
+
+.enviar:hover {
+	background: darkorange;
+	transform: scale(1.2);
+}
+
+table {
+	margin: 20px 0 40px;
+}
+
+thead {
+	background: #555555;
+	color: white;
+	font-weight: bold;
+}
+
+td, th {
+	border: 1px solid #000000;
+	padding: 8px 15px;
 }
 
 .banner {
-  width: 100%;
-}
-
-.principal {
-  background: #CCCCCC;
-  padding: 30px;
+	width:100%;
 }
 
 .titulo-principal {
-  padding-left: 20px;
+	text-align: center;
+	font-size: 2em;
+	margin: 0 0 1em;
+	clear: left;
 }
 
-.titulo-secundario {
-  text-align: center;
+.principal p {
+	margin: 0 0 1em;
 }
 
-p {
-  text-align: center;
+.principal strong {
+	font-weight: bold;
 }
 
-#missao {
-  font-size: 20px
+.principal em {
+	font-style: italic;
 }
 
-em strong {
-  color: #a020f0;
+.utensilios {
+	width: 120px;
+	float: left;
+	margin: 0 20px 20px 0;
 }
 
-.itens {
-  font-style: italic;
+.imagem-beneficios {
+	width: 60%;
 }
 
-.beneficios {
-  background: #FFFFFF; 
-  padding: 20px;
-  text-aling: center;
+.mapa {
+    padding: 3em 0;
 }
 
-ul {
-  display: inline-block;
-  vertical-align: top;
-  width: 20%;
-  margin-right: 15%;
-}
-.imagem-beneficios{
-  width: 50%
-}
-
-.mapa{
-  padding: 3em 0;
-}
-
-.mapa p{
-  margin: 0 0 2em;
-  text-aling: center;
+.mapa p {
+    margin: 0 0 2em;
+    text-align: center;
 }
 
 .video {
-  width: 560px;
-  margin: 1em auto;
+    width: 560px;
+    margin: 1em auto;
 }
