--- a/style.css
+++ b/style.css
@@ -98,8 +98,7 @@ footer {
 }
 
 main {
-	width: 940px;
-	margin: 0 auto;
+	
 }
 
 form {
@@ -189,8 +188,32 @@ td, th {
 	width: 60%;
 }
 
+.conteudo-beneficios{
+	width: 640px;
+	margin: 0 auto;
+}
+.lista-beneficios {
+	width: 40%;
+	display: inline-block;
+	vertical-aling: top;
+}
+
+.itens {
+	line-height: 1.5;
+}
+
+.itens:first-child {
+	font-weight: bold;
+}
+
+.beneficios{
+	padding: 3em 0;
+	background: #888888;
+}
+
 .mapa {
     padding: 3em 0;
+    background: liner-gradient(#FEFEFE, #888888);
 }
 
 .mapa p {
@@ -200,5 +223,5 @@ td, th {
 
 .video {
     width: 560px;
-    margin: 1em auto;
+    margin: 2em auto;
 }
