--- a/style.css
+++ b/style.css
@@ -155,6 +155,8 @@ td, th {
 	padding: 8px 15px;
 }
 
+
+/* css da página inicial */
 .banner {
 	width:100%;
 }
@@ -166,8 +168,11 @@ td, th {
 	clear: left;
 }
 
-.principal p {
-	margin: 0 0 1em;
+.principal {
+	padding: 3em 0;
+	background: #FEFEFE;
+	width: 940px;
+	margin: 0 auto;
 }
 
 .principal strong {
@@ -188,14 +193,15 @@ td, th {
 	width: 60%;
 }
 
-.conteudo-beneficios{
+.conteudo-beneficios {
 	width: 640px;
 	margin: 0 auto;
 }
+
 .lista-beneficios {
 	width: 40%;
 	display: inline-block;
-	vertical-aling: top;
+	vertical-align: top;
 }
 
 .itens {
@@ -206,22 +212,50 @@ td, th {
 	font-weight: bold;
 }
 
-.beneficios{
+.beneficios {
 	padding: 3em 0;
 	background: #888888;
 }
 
 .mapa {
-    padding: 3em 0;
-    background: liner-gradient(#FEFEFE, #888888);
+	padding: 3em 0;
+}
+
+.mapa-conteudo {
+	width: 940px;
+	margin: 0 auto;
 }
 
 .mapa p {
-    margin: 0 0 2em;
-    text-align: center;
+	margin: 0 0 2em;
+	text-align: center;
 }
 
 .video {
-    width: 560px;
-    margin: 2em auto;
+	width: 560px;
+	margin: 2em auto;
 }
+
+
+/* Proxima aula
+
+*inserir na linha 171 
+.principal {
+	padding: 3em 0;
+	background: #FEFEFE;
+	width: 940px;
+	margin: 0 auto;
+}
+
+
+* inserir entre .mapa e .mapa p
+.mapa-conteudo {
+	width: 940px;
+	margin: 0 auto;
+}
+
+Mudar a ordem de todas as classes mapa deixando após a classe utensilios
+
+inverter a posição das classes benefícios e imagem-beneficios
+
+*/
