--- a/style.css
+++ b/style.css
@@ -191,6 +191,13 @@ td, th {
 
 .imagem-beneficios {
 	width: 60%;
+	opacity: 1;
+	transitions: 400ms;
+	box-shadow: 10px 10px 10px 0 #000000;
+}
+
+.imagem-beneficios:hover{
+	opacity: 0.3;
 }
 
 .conteudo-beneficios {
@@ -212,6 +219,10 @@ td, th {
 	font-weight: bold;
 }
 
+.itens:before {
+	content:"🌟";
+}
+	
 .beneficios {
 	padding: 3em 0;
 	background: #888888;
