--- a/style.css
+++ b/style.css
@@ -258,6 +258,23 @@ td, th {
 	margin: 0 auto;
 }
 
+@media screen and (max-width: 480px) {
+    .caixa, .principal, .conteudo-beneficios, .mapa-conteudo, .video {
+        width: auto;
+    }
+
+    h1 {
+        text-align: center;
+    }
+
+    nav {
+        position: static;
+    }
+
+    .lista-beneficios, .imagem-beneficios {
+        width: 100%;
+    }
+}
 
 * inserir entre .mapa e .mapa p
 .mapa-conteudo {
